--- a/book/17.md
+++ b/book/17.md
@@ -1,130 +1,190 @@
 # Kemampuan Akhir Yang Direncanakan
 
-- Peserta mampu membuat service guard untuk admin
+- Peserta mampu membuat update method
 
-# Percobaan 16 membuat service guard untuk admin
+# Percobaan menambahkan code pada update method
 
-- tambahkan child baru seperti pada gambar
-
-![](image/chapter2/img19.png)
-
-- jika berhasil maka tampilannya akan seperti berikut 
-
-![](image/chapter2/img20.png)
-
-- generate servis baru untuk admin
+- langkah berikutnya buka file **app.component.html** hapus **placehoder="yyyy-mm-dd"** dan ganti label **profile update** menjadi **Edit Todo**, tambahkan juga code <i class="fa fa-calendar" aria-hidden="true"> sehingga codenya seperti berikut 
 
 ```
-ng g s admin-auth-guard
+ <div class="form-group">
+        <label for="date">Completion Date</label>
+        <div class="input-group">
+          <input
+            id="date"
+            class="form-control"
+            formControlName="date"
+            name="dp"
+            ngbDatepicker
+            #dp="ngbDatepicker"
+          />
+          <div class="input-group-append">
+            <button
+              class="btn btn-outline-secondary calendar"
+              (click)="dp.toggle()"
+              type="button"
+            ><i class="fa fa-calendar" aria-hidden="true"></i></button>
+          </div>
+        </div>
+      </div>
 ```
 
-- buka file **app.module.ts** tambahkan pada providers **AdminAuthGuardService rename menjadi AdminAuthGuard**
+
+- buka file **app.component.ts** tambahkan property **todo,titlteValue,dateValue** seperti berikut 
 
 ```
-  providers: [
-    AuthService,
-    AuthGuard,
-    UserService,
-    AdminAuthGuard
-  ],
+export class AppComponent {
+
+  newTodo:Todo=new Todo();
+  editForm:FormGroup;
+  todo:any;
+  titleValue:string;
+  dateValue:string;
+
+  constructor( 
+    private todoService:TodoDataService,
+    private modalService: NgbModal,
+    private fb:FormBuilder){}
 ```
-- buka file **admin-auth-guard.service.ts** dan tambahkan code berikut
+
+- kita cek apakah pada method **open** isi dari parameter todo tambahkan code **console.log(todo)**
 
 ```
-import { Injectable } from '@angular/core';
-import { CanActivate } from '@angular/router';
-import { AuthService } from './auth.service';
-import { AppUser } from './models/app-user';
-import { map, switchMap} from 'rxjs/operators';
-import {UserService} from './user.service';
-import {Observable} from 'rxjs';
-
-@Injectable({
-  providedIn: 'root'
-})
-export class AdminAuthGuard implements CanActivate{
-
-  constructor(private auth:AuthService,private userService:UserService) {}
-
-  canActivate():Observable<boolean>{
-    return this.auth.user$.pipe(
-      switchMap(user=> this.userService.get(user.uid)),
-      map((appUser:AppUser)=>appUser.isAdmin)
-    )
+ open(content,todo){
+    console.log(todo);
+    this.initForm();
+    this.modalService.open(content, {ariaLabelledBy: 'modal-basic-title'});
   }
-}
-
-
 ```
 
-- buka file **user.services.ts** dan tambahkan code berikut:
+![](image/chapter1/img27.png)
+
+- buka file **app.component.ts** dan tambahkan code berikut pada method **open**
+- perhatikan pada code **this.titleValue dan this.dateValue itu bukan petik satu('') tapi Aksen akut(``)**
 
 ```
-import { Injectable } from '@angular/core';
-import * as firebase from 'firebase';
-import { AngularFireDatabase } from 'angularfire2/database';
-
-
-
-@Injectable({
-  providedIn: 'root'
-})
-export class UserService {
-
-  constructor(private db:AngularFireDatabase) { }
-
-  save(user:firebase.User){
-    this.db.object('/users/' + user.uid).update({
-      nama: user.displayName,
-      email:user.email
-    });
+ open(content,todo){
+   open(content,todo){
+    // console.log(todo);
+    this.initForm();
+    this.todo={
+      id: todo.id,
+      title:todo.title,
+      date:todo.date,
+      complete:todo.complete
+    }
+    if(todo.date.year && todo.date.month){
+      console.log(todo.date.year && todo.date.month);
+      this.titleValue=`${todo.title}`;
+      this.dateValue=`${todo.date.day}-${todo.date.month}-${todo.date.year}`;
+    }
+    this.modalService.open(content, {ariaLabelledBy: 'modal-basic-title'});
   }
+```
+- buka file **app.component.html** dan tambahkan **value** pada  **class modal-body** dan **form-group editForm dan form-group completion**
 
-  // tambahkan get method
-  get(uid:string){
-    return this.db.object('/users/'+uid).valueChanges();
+```
+ <div class="modal-body">
+    <form [formGroup]="editForm">
+      <div class="form-group">
+        <label for="">Title</label>
+        <div class="input-group">
+          <input
+            type="text"
+            class="form-control"
+            formControlName="title"
+            name="title"
+            value="{{ titleValue }}"
+          />
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="date">Completion Date</label>
+        <div class="input-group">
+          <input
+            id="date"
+            class="form-control"
+            formControlName="date"
+            name="dp"
+            value="{{ dateValue }}"
+            ngbDatepicker
+            #dp="ngbDatepicker"
+          />
+```
+- jika benar maka hasilnya akan seperti berikut
+![](image/chapter1/img28.png)
+
+- buka file **app.component.ts** tambahkan beberapa code pada **method updateTodo dan method open** tambahkan juga property **isEdited type boolean**
+
+```
+ newTodo:Todo=new Todo();
+  editForm:FormGroup;
+  todo:any;
+  titleValue:string;
+  dateValue:string;
+  isEdited:boolean;
+```
+
+```
+ updateTodo(){
+    this.todoService.updateTodo(this.todo.id,this.editForm.value);
+    this.isEdited=true;
   }
-}
+```
+```
+  open(content,todo){
+    // console.log(todo);
+    this.isEdited=false;
+    this.initForm();
+    this.todo={
+      id: todo.id,
+      title:todo.title,
+      date:todo.date,
+      complete:todo.complete
+    }
+    if(todo.date.year && todo.date.month){
+      // console.log(todo.date.year && todo.date.month);
+      this.titleValue=`${todo.title}` ;
+      this.dateValue=`${todo.date.day}-${todo.date.month}-${todo.date.year}`;
+    }
+    this.modalService.open(content, {ariaLabelledBy: 'modal-basic-title'});
+  }
+```
+- selanjutnya kita tambahkan alert, buka file **app.component.html**
 
 ```
-
-- buatlah satu folder dengan nama **models** di **oshop/app**dan buatlah file dengan nama **app-user.ts** didalam folder tersebut
-- buka file **app-user.ts** tambahkan code berikut:
+<ngb-alert [dismissible]="false">
+    <strong>Warning!</strong> Better check yourself, you're not looking too good.
+  </ngb-alert>
+```
 
 ```
-export interface AppUser{
-    name:string;
-    email:string;
-    isAdmin:boolean;
-}
+  <div class="modal-body">
+    <!-- alert -->
+    <ngb-alert *ngIf="isEdited" type="success">
+        <strong>Todo is Updated successfull</strong>
+      </ngb-alert>
+
+    <form [formGroup]="editForm">
+      <div class="form-group">
+        <label for="">Title</label>
+        <div class="input-group">
 ```
-- buka file **app.module.ts** tambahkan code **AdminAuthGuard** pada **path admin/admin-products dan admin/admin-orders** seperti code dibawah ini
+
+- rubah code button **yang sebelumnya cancel menjadi save dan begitu sebalik** pada **app.component.html** seperti gambar berikut
 
 ```
-RouterModule.forRoot(
-      [
-        {path:'',component:HomeComponent},
-        {path:'products',component:ProductsComponent},
-        {path:'shopping-chart',component:ShoppingChartComponent},
-        {path:'check-out',component:CheckOutComponent, canActivate:[AuthGuard]},
-        {path:'order-success',component:OrderSuccessComponent,canActivate:[AuthGuard]},
-        {path:'orders',component:MyOrdersComponent,canActivate:[AuthGuard]},
-        {path:'login',component:LoginComponent},
-        {path:'admin/admin-products',
-              component:AdminProductsComponent,
-              canActivate:[AuthGuard,AdminAuthGuard]},
-        {path:'admin/admin-orders',
-              component:AdminOrdersComponent,
-              canActivate:[AuthGuard,AdminAuthGuard]},        
-      ]
-    )
+    <button
+      type="button"
+      class="btn btn-danger"
+      (click)="modal.close('Save click')"
+    >
+      Save
+    </button>
+    <button type="button" class="btn btn-primary" (click)="updateTodo()">
+      Cancel
+    </button>
 ```
-- untuk mengecek keberhasilan sistem pilih menu **manage order**.Karena posisi awal **isAdmin true** maka kita akan berhasil masuk ke halaman **admin-oreder works** seperti pada gambar berikut
 
-![](image/chapter2/img21.png)
-
-- kita coba ganti isAdminnya menjadi false seperti pada gambar
-
-![](image/chapter2/img22.png)
-
-- kita coba pilih menu **manage order** dan refresh maka lihat hasilnya kita tidak dapat mengakses kembali menu  **manage order**
+- jika berhasil maka akan seperti berikut:
+![](image/chapter1/img29.png)
