--- a/book/18.md
+++ b/book/18.md
@@ -1,178 +1,125 @@
 # Kemampuan Akhir Yang Direncanakan
 
-- Peserta mampu mengatur menu-menu untuk admin dan user 
+- Peserta  mampu memperbaiki fungsi dari update
 
-# Percobaan 17 menampilkan dan menyembunyikan link admin 
-- langkah pertama  buka file **admin-auth-guard.service.ts** dan modifikasi code seperti berikut
+# Percobaan memperbaiki fungsi dari update
 
-```
-import { Injectable } from '@angular/core';
-import { CanActivate } from '@angular/router';
-import { AuthService } from './auth.service';
-import { map} from 'rxjs/operators';
-import {UserService} from './user.service';
-import {Observable} from 'rxjs';
+- jika kita lakukan proses save maka hasilnya akan seperti gambar berikut
+![](image/chapter1/img30.png)
 
-import { AngularFireDatabase } from 'angularfire2/database';
-
-@Injectable({
-  providedIn: 'root'
-})
-export class AdminAuthGuard implements CanActivate{
-
-  constructor(private auth:AuthService,private userService:UserService,private db:AngularFireDatabase,) {}
-  
-  canActivate(): Observable<boolean> {
-    return this.auth.appUser$
-    .pipe(map(AppUser => AppUser.isAdmin));
-    }
-}
-
-```
-
-- buka file **auth.service.ts** modifikasi codenya menjadi seperti berikut **tambahkan method get Appuser$**
-
-```
-import { Injectable } from '@angular/core';
-import { AngularFireAuth } from 'angularfire2/auth';
-import * as firebase from 'firebase';
-import { Observable, of  } from 'rxjs';
-import { ActivatedRoute } from '@angular/router';
-import { AppUser } from './models/app-user';
-import { switchMap} from 'rxjs/operators';
-import { UserService } from './user.service';
-import { AngularFireDatabase } from 'angularfire2/database';
-
-
-
-@Injectable({
-  providedIn: 'root'
-})
-export class AuthService {
-
-  user$:Observable<firebase.User>;
- 
-  
-  //tambahkan parameter ActivedRoute
-  constructor(
-    private db:AngularFireDatabase,
-    private userService:UserService,
-    private afAuth:AngularFireAuth, 
-    private route :ActivatedRoute) {
-
-    this.user$= afAuth.authState;
-   }
-
-   // tambahakan property snapshot pada route dan property queryParamMap
-  login(){
-    let returnUrl=this.route.snapshot.queryParamMap.get('returnUrl')||'/';
-    localStorage.setItem('returnUrl',returnUrl);
-    this.afAuth.auth.signInWithRedirect(new firebase.auth.GoogleAuthProvider());
-  }
-
-  logout(){
-    this.afAuth.auth.signOut();
-  }
- 
-get appUser$() : Observable<AppUser> {
-  
-    return this.user$.pipe(
-    switchMap(user =>
-      {
-        if (user){
-          return this.db.object('/users/'+ user.uid).valueChanges();
-        } else{
-          return of(null);
-        }
-      }
-     ))
-  }
-}
-
-
-```
-- buka file **bs-navbar.component.ts** modifikasi code menjadi seperti berikut :
-
-```
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" routerLink="/">O</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-    <ul class="navbar-nav mr-auto">
-
-      <li class="nav-item">
-        <!-- 2.tambahkan routerlink -->
-        <a class="nav-link" routerLink="/shopping-chart">Shopping Chart</a>
-      </li>
-
-      <!-- tambahkan ng template -->
-        <ng-template #anonymousUser>
-              <li class="nav-item">
-              <a class="nav-link" routerLink="/login">Login</a>
-            </li>
-        </ng-template>
-   
-      <!-- edit jd appUser$ -->
-      <li ngbDropdown *ngIf="appUser; else anonymousUser" class="nav-item dropdown">
-
-        <!-- edit mjd  {{appUser.name}}-->
-        <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{appUser.nama}}</a>
-        <div ngbDropdownMenu class="dropdown-menu show" aria-labelledby="dropdown01">
-
-          <!-- rubah code seperti dibawah ini -->
-          <a class="dropdown-item" routerLink="orders">My Orders</a>
-
-          <!-- tambahkan ng container -->
-          <ng-container *ngIf="appUser.isAdmin">
-              <a class="dropdown-item" routerLink="/admin/admin-orders">Manage Orders</a>
-              <a class="dropdown-item" routerLink="/admin/admin-products">Manage Products</a>
-          </ng-container>
-         
-          <a class="dropdown-item" (click)="logout()"> Log Out</a>
-        </div>
-      </li>
-    </ul>
-  </div>
-</nav>
-
-
-```
-- buka file **bs-navbar.module.ts** modifikasi code sehingga seperti berikut
+- hal ini dikarenakan method update tidak berjalan dengan baik. Untuk itu lakukan beberapa step berikut ini
+- buka fike **app.component.ts** modifikasi method initForm
 
 ```
 import { Component } from '@angular/core';
-import { AuthService } from '../auth.service';
-import { AppUser } from '../models/app-user';
-
+import { Todo } from './class/todo';
+import { TodoDataService } from './services/todo-data.service';
+import { NgbModal } from '@ng-bootstrap/ng-bootstrap';
+import { FormGroup, FormBuilder, Validators } from '@angular/forms';
+import { Content } from '@angular/compiler/src/render3/r3_ast';
 
 @Component({
-  selector: 'bs-navbar',
-  templateUrl: './bs-navbar.component.html',
-  styleUrls: ['./bs-navbar.component.css']
+  selector: 'app-root',
+  templateUrl: './app.component.html',
+  styleUrls: ['./app.component.css']
 })
-export class BsNavbarComponent {
-  appUser: AppUser;
+export class AppComponent {
 
-  constructor(private auth:AuthService) {
-    auth.appUser$.subscribe(appUser => this.appUser = appUser);
+  newTodo:Todo=new Todo();
+  editForm:FormGroup;
+  todo:any;
+  titleValue:string;
+  dateValue:string;
+  isEdited:boolean;
+
+  constructor( 
+    private todoService:TodoDataService,
+    private modalService: NgbModal,
+    private fb:FormBuilder){}
+
+  get todos(){
+    return this.todoService.getAllTodos();
   }
 
-  logout(){
-    this.auth.logout();
+  addTodo(){
+    // console.log(this.newTodo);
+    if(this.newTodo.title && this.newTodo.date){
+      this.todoService.addTodos(this.newTodo);
+      //cek isi new todo apakah berhasil
+      // console.log(this.newTodo);
+      this.newTodo= new Todo();
+      this.newTodo.title='';
+      this.newTodo.date='';
+    }
+  }
+
+  deleteTod(todo){
+    this.todoService.deleteTodoById(todo.id);
+  }
+
+  completeTodo(todo){
+    this.todoService.compoleteTodo(todo);
+  }
+
+  open(content,todo){
+    // console.log(todo);
+    this.isEdited=false;
+    this.initForm(todo);
+    this.todo={
+      id: todo.id,
+      title:todo.title,
+      date:todo.date,
+      complete:todo.complete
+    }
+    if(todo.date.year && todo.date.month){
+      // console.log(todo.date.year && todo.date.month);
+      this.titleValue=`${todo.title}` ;
+      this.dateValue=`${todo.date.day}-${todo.date.month}-${todo.date.year}`;
+    }
+    if(todo.date.year && !todo.date.month){
+      // console.log(todo.date.year && todo.date.month);
+      this.titleValue=`${todo.title}` ;
+      this.dateValue=`${todo.date}`;
+    }
+    this.modalService.open(content, {ariaLabelledBy: 'modal-basic-title'});
+  }
+
+  updateTodo(){
+    this.todoService.updateTodo(this.todo.id,this.editForm.value);
+    this.isEdited=true;
+  }
+
+  initForm(todo){
+    // this.editForm=this.fb.group({
+    //   title:['',Validators.required],
+    //   date:['',Validators.required]
+    // });
+    if(todo.date.year && todo.date.month){
+      this.editForm=this.fb.group({
+      title:[`${todo.title}`,Validators.required],
+      date:[`${todo.date.day}-${todo.date.month}-${todo.date.year}`,Validators.required]
+    });
+    }
+    if(todo.date.year && !todo.date.month){
+      this.editForm=this.fb.group({
+      title:[`${todo.title}`,Validators.required],
+      date:[`${todo.date}`,Validators.required]
+    });
+    }
+
   }
 }
+
 ```
-- jalankan **ng serve** jika berhasil maka saat **isAdmin bernilai false** maka tampilannya seperti berikut
 
-![](image/chapter2/img23.png)
+- buka file **app.component.html** tambahkan code berikut
 
-![](image/chapter2/img24.png)
+```
+<td *ngIf="todo.date.year && todo.date.month">{{ todo.date.day }}-{{ todo.date.month }}-{{ todo.date.year }}</td>
+        <td *ngIf="todo.date && !todo.date.month">{{ todo.date}}</td>
 
-- jalankan **ng serve** jika berhasil maka saat **isAdmin bernilai true** maka tampilannya seperti berikut
-
-![](image/chapter2/img25.png)
-
-![](image/chapter2/img26.png)
+```
+- jika berhasil maka hasilnya seperti berikut
+![](image/chapter1/img31.png)
+![](image/chapter1/img32.png)
+![](image/chapter1/img33.png)
